Made email clickable and fixed contrast and heading rank issues

--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,11 @@ h1 {
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 h3 {
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 h4 {
@@ -183,7 +183,7 @@ nav ul li {
     margin-top: 80px;
 }
 
-#projects h2 {
+#projects h3 {
     clear: both;
 }
 
@@ -205,10 +205,10 @@ nav ul li {
     background: #ED8975;
     border: 0;
     border-radius: 50px;
-    color: white;
+    color: #121621;
     display: flex;
     font-size: 1.125em;
-    font-weight: bold;
+    font-weight: 900;
     justify-content: center;
     margin: 30px auto 60px;
     padding: 1em 3em;
@@ -220,7 +220,7 @@ nav ul li {
     padding-bottom: 80px;
 }
 
-#skills h2 {
+#skills h3 {
     margin: 20px auto;
 }
 
@@ -257,7 +257,7 @@ nav ul li {
     width: 60%;
 }
 
-#about h2 {
+#about h3 {
     margin: 40px 0 15px;
 }
 
@@ -273,6 +273,7 @@ nav ul li {
 #contact p {
     margin: 60px auto;
     text-align: center;
+    text-decoration: underline;
 }
 
 #contact ul {
@@ -387,11 +388,11 @@ i {
   }
 
   h2 {
-    font-size: 2.5em;
+    font-size: 2.25em;
   }
 
   h3 {
-    font-size: 2.25em;
+    font-size: 2.5em;
   }
 
   h4 {
@@ -422,7 +423,7 @@ i {
     justify-content: space-between;
   }
 
-  #projects h2 {
+  #projects h3 {
     margin-bottom: 60px;
     width: 100%;
   }
@@ -447,7 +448,7 @@ i {
     justify-content: space-between;
   }
 
-  #skills h2 {
+  #skills h3 {
     margin: 40px auto;
     width: 100%;
   }
@@ -494,13 +495,13 @@ i {
     h1 {
         font-size: 3.25em;
     }
-    
+        
     h2 {
-        font-size: 2.75em;
-    }
-    
-    h3 {
         font-size: 2.5em;
+    }
+
+    h3 {
+        font-size: 2.75em;
     }
     
     h4 {
@@ -526,7 +527,7 @@ i {
     }
 
     /*Projects Styles*/
-    #projects h2 {
+    #projects h3 {
         margin: 40px auto;
     }
 
@@ -569,7 +570,7 @@ i {
         flex-basis: 50%;
     }
 
-    #about h2 {
+    #about h3 {
         margin-top: 0;
         text-align: left;
     }
